--- a/LoginFormsApp/Pages/Shared/_Layout.cshtml
+++ b/LoginFormsApp/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Login1">Login1</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login2">Login2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login3">Login3</a>
+                        </li>
                     </ul>
                 </div>
             </div>
