--- a/LoginFormsApp/Pages/Login3.cshtml
+++ b/LoginFormsApp/Pages/Login3.cshtml
@@ -1,9 +1,7 @@
 ﻿@page
-@model LoginFormsApp.Pages.Login1Model
+@model LoginFormsApp.Pages.Login3Model
 @{
 }
-
-<script src="lib/payne-debugger/debugHelper.min.js"></script>
 
 <style>
     .pass_show {
@@ -35,57 +33,40 @@
 <div class="container">
 
     <form role="form" class="mt-3">
-        
+
+
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
 
                 <label for="current_password">Current Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" 
-                           id="current_password" 
-                           value="faisalkhan@123" 
-                           class="form-control" 
-                           placeholder="Current Password">
+                    <input type="password" id="current_password" value="faisalkhan@123" class="form-control" placeholder="Current Password">
                 </div>
 
                 <label for="new_password" class="mt-5">New Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" 
-                           id="new_password" 
-                           value="@@SomePassword1" 
-                           class="form-control" 
-                           placeholder="New Password">
+                    <input type="password" id="new_password" value="faisal.khan@123" class="form-control" placeholder="New Password">
                 </div>
 
                 <label for="confirm_password" class="mt-5">Confirm Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" 
-                           id="confirm_password" 
-                           value="@@SomePassword1" 
-                           class="form-control" 
-                           placeholder="Confirm Password">
+                    <input type="password" id="confirm_password" value="faisal.khan@123" class="form-control" placeholder="Confirm Password">
                 </div>
 
             </div>
-
-            <div class="col-5 d-lg-block d-none d-md-block" style="margin-top: 3.5em; padding-left: 1em;">
-                <p id="rules_text">@Model.RuleHeader</p>
-                <p>@Model.Rules</p>
+            <div class="col-sm-3" style="margin-top: 3.5em; padding-left: 1em;">
+                <p id="rules_text">Password Rules</p>
+                <p>Password must be at least 8 characters long, contain at least one number, one uppercase letter, one lowercase letter, and one special character.</p>
             </div>
 
 
         </div>
 
-        <div class="row mt-3 d-sm-block d-lg-none d-md-none">
-            <p id="rules_text">@Model.RuleHeader</p>
-            <p>@Model.Rules</p>
-        </div>
-        
+
     </form>
 </div>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
 <script>
 
 
@@ -98,15 +79,4 @@
         $(this).prev().attr('type', function (index, attr) { return attr == 'password' ? 'text' : 'password'; });
     });
 
-    /*
-    * Karen code
-    * CTRL+ALT+1 toggles adding/removing debugger.css
-    */
-    document.addEventListener('keydown', function (event) {
-
-        if (event.key === '1' && event.altKey && event.ctrlKey) {
-            $debugHelper.toggle();
-        }
-
-    });
 </script>
