--- a/LoginFormsApp/Pages/Index.cshtml
+++ b/LoginFormsApp/Pages/Index.cshtml
@@ -5,7 +5,21 @@
 }
 
 <div class="container">
+
     <div class="alert alert-primary" role="alert">
-        <h1 class="fs-5">Welcome</h1>    
+        <h1 class="fs-5">Various login sample</h1>
     </div>
-</div>
+
+    <div class="card w-100" style="margin-top: 8em;">
+        <div class="row justify-content-evenly">
+            <div class="col-auto">
+                <img src="images/title.png" width="45" height="69" class="card-img-top" alt="login demo">
+            </div>
+
+            <div class="card-body">
+                <h2 class="card-title text-center">About</h2>
+                <p class="card-text text-center">Work in progress samples</p>
+            </div>
+
+        </div>
+    </div>
