--- a/LoginFormsApp/Pages/Login1.cshtml
+++ b/LoginFormsApp/Pages/Login1.cshtml
@@ -70,15 +70,15 @@
 
             <div class="col-5 d-lg-block d-none d-md-block" style="margin-top: 3.5em; padding-left: 1em;">
                 <p id="rules_text">@Model.RuleHeader</p>
-                <p>@Model.Rules</p>
+                <p id="rules_text_top">@Model.Rules</p>
             </div>
 
 
         </div>
 
         <div class="row mt-3 d-sm-block d-lg-none d-md-none">
-            <p id="rules_text">@Model.RuleHeader</p>
-            <p>@Model.Rules</p>
+            <p id="rules_text_bottom">@Model.RuleHeader</p>
+            <p id="rules_text_bottom">@Model.Rules</p>
         </div>
         
     </form>
