--- a/LoginFormsApp/Pages/Shared/_Layout.cshtml
+++ b/LoginFormsApp/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Login2">Login2</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login3">Login3</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Feathers1">Feather</a>
                         </li>
                     </ul>
                 </div>
