--- a/LoginFormsApp/Pages/Login2.cshtml
+++ b/LoginFormsApp/Pages/Login2.cshtml
@@ -37,42 +37,66 @@
     <form role="form" class="mt-3">
 
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-4">
 
                 <label for="current_password">Current Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" id="current_password" value="faisalkhan@123" class="form-control" placeholder="Current Password">
+                    <input type="password"
+                           id="current_password"
+                           value="faisalkhan@123"
+                           class="form-control"
+                           placeholder="Current Password">
                 </div>
 
                 <label for="new_password" class="mt-5">New Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" id="new_password" value="@@SomePassword1" class="form-control" placeholder="New Password">
+                    <input type="password"
+                           id="new_password"
+                           value="@@SomePassword1"
+                           class="form-control"
+                           placeholder="New Password">
                 </div>
 
                 <label for="confirm_password" class="mt-5">Confirm Password</label>
                 <div class="form-group pass_show">
-                    <input type="password" id="confirm_password" value="@@SomePassword1" class="form-control" placeholder="Confirm Password">
+                    <input type="password"
+                           id="confirm_password"
+                           value="@@SomePassword1"
+                           class="form-control"
+                           placeholder="Confirm Password">
                 </div>
 
             </div>
-            <div class="col-sm-3" style="margin-top: 3.5em; padding-left: 1em;">
-                <p id="rules_text">Password Rules</p>
-                <p>Password must be at least 8 characters long, contain at least one number, one uppercase letter, one lowercase letter, and one special character.</p>
+
+            <div class="col-5 d-lg-block d-none d-md-block" style="margin-top: 3.5em; padding-left: 1em;">
+                <p id="rules_text">@Model.RuleHeader</p>
+                <p id="rules_text_top">@Model.Rules</p>
             </div>
 
 
         </div>
 
-
+        <div class="row mt-3 d-sm-block d-lg-none d-md-none">
+            <p id="rules_text_bottom">@Model.RuleHeader</p>
+            <p id="rules_text_bottom">@Model.Rules</p>
+        </div>
 
     </form>
 </div>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
 <script>
 
 
+    document.addEventListener("DOMContentLoaded", () => {
+        $('.pass_show').append('<span class="ptxt">Show</span>');
+    });
 
+    $(document).on('click', '.pass_show .ptxt', function () {
+        $(this).text($(this).text() == "Show" ? "Hide" : "Show");
+        $(this).prev().attr('type', function (index, attr) { return attr == 'password' ? 'text' : 'password'; });
+    });
 
     /*
     * Karen code
