--- a/LoginFormsApp/Pages/Login1.cshtml
+++ b/LoginFormsApp/Pages/Login1.cshtml
@@ -22,7 +22,8 @@
         }
 
             .pass_show .ptxt:hover {
-                color: #333333;
+                color: black;
+                font-weight: bold;
             }
 </style>
 
@@ -67,7 +68,14 @@
                 </div>
 
             </div>
+            
+            @* 
+             The following div is only visible on large screens as per
+             d-lg-block  d-md-block  indicate in short show on large and medium screens
+             and hide on small screens
 
+            @Model.RuleHeader and @Model.Rules are the same as #RuleHeader# and #Rules# in Cold Fusion
+            *@
             <div class="col-5 d-lg-block d-none d-md-block" style="margin-top: 3.5em; padding-left: 1em;">
                 <p id="rules_text">@Model.RuleHeader</p>
                 <p id="rules_text_top">@Model.Rules</p>
@@ -75,9 +83,14 @@
 
 
         </div>
-
+        
+        @* 
+         The following div is only visible on small screens as per
+            d-sm-block  indicate show on small screens and hide on medium and large screens
+            as per d-lg-none d-md-none
+        *@
         <div class="row mt-3 d-sm-block d-lg-none d-md-none">
-            <p id="rules_text_bottom">@Model.RuleHeader</p>
+            <p id="rules_text_bottom_head">@Model.RuleHeader</p>
             <p id="rules_text_bottom">@Model.Rules</p>
         </div>
         
