--- a/LoginFormsApp/Pages/Feathers1.cshtml
+++ b/LoginFormsApp/Pages/Feathers1.cshtml
@@ -11,8 +11,15 @@
         <label class="form-label" for="password">Password</label>
         <div class="col-4">
             <div class="input-group">
-                <input class="form-control password" id="password" class="mt-1" type="password" name="password" value="secret!" required />
-                <span class="input-group-text togglePassword" id="">
+
+                <input class="form-control password" 
+                       id="password" 
+                       class="mt-1" 
+                       type="password" 
+                       name="password" 
+                       value="secret!" required/>
+
+                <span class="input-group-text togglePassword" id="password_feather">
                     <i data-feather="eye" style="cursor: pointer"></i>
                 </span>
             </div>
@@ -29,15 +36,20 @@
         feather.replace({ 'aria-hidden': 'true' });
 
         $(".togglePassword").click(function (e) {
+
             e.preventDefault();
             var type = $(this).parent().parent().find(".password").attr("type");
-            console.log(type);
+
             if (type === "password") {
+
                 $("svg.feather.feather-eye").replaceWith(feather.icons["eye-off"].toSvg());
                 $(this).parent().parent().find(".password").attr("type", "text");
+
             } else if (type === "text") {
+
                 $("svg.feather.feather-eye-off").replaceWith(feather.icons["eye"].toSvg());
                 $(this).parent().parent().find(".password").attr("type", "password");
+
             }
         });
     </script>
