--- a/LoginFormsApp/Pages/Login2.cshtml
+++ b/LoginFormsApp/Pages/Login2.cshtml
@@ -77,7 +77,7 @@
         </div>
 
         <div class="row mt-3 d-sm-block d-lg-none d-md-none">
-            <p id="rules_text_bottom">@Model.RuleHeader</p>
+            <p id="rules_text_bottom_head">@Model.RuleHeader</p>
             <p id="rules_text_bottom">@Model.Rules</p>
         </div>
 
