--- a/LoginFormsApp/Pages/Shared/_Layout.cshtml
+++ b/LoginFormsApp/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LoginWithEye">LoginWithEye</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Login1">Login1</a>
                         </li>
