--- a/Bootstrap5PopoverExample/Pages/Index.cshtml
+++ b/Bootstrap5PopoverExample/Pages/Index.cshtml
@@ -22,7 +22,7 @@
 <div class="container">
 
     <div class="alert alert-primary" role="alert">
-        Bootstrap 5 popover
+        <h1 class="fs-5">Popover examples</h1>
     </div>
 
     <div style="height: 2em"></div>
@@ -66,7 +66,7 @@
                     type="button"
                     class="btn btn-lg btn-danger w-100"
                     id="specialPopOver" data-toggle="popover">
-                    With style
+                    Styled
                 </button>
             </div>
         </div>
