--- a/Project1/Pages/Shared/_Layout.cshtml
+++ b/Project1/Pages/Shared/_Layout.cshtml
@@ -3,23 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Bootstrap5CheckBoxExample</title>
+    <title>@ViewData["Title"] - project1</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Bootstrap5CheckBoxExample.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Project1.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="skiplink mb-4 text-dark" style="text-decoration: none;"
-                   id="skipper"
-                   asp-fragment="main-content"
-                   aria-label="Skip to content">
-                    Skip to content <img src="images/key-enter1.png" alt="Press enter to skip to main content"/>
-                </a>
+        <nav class="navbar 
+                    nav-underline 
+                    navbar-expand-sm 
+                    navbar-toggleable-sm 
+                    navbar-light 
+                    bg-white 
+                    border-bottom 
+                    box-shadow 
+                    mb-3">
 
-                @* <a class="navbar-brand" asp-area="" asp-page="/Index">Bootstrap5CheckBoxExample</a> *@
+            <div class="container">
+
+                @* https://blog.getbootstrap.com/#new-link-helpers-and-utilities *@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,7 +33,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Profile">Profile</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            Bootstrap5CheckBoxExample
+            Footer
         </div>
     </footer>
 
