--- a/DarkLightMode/Pages/Index.cshtml
+++ b/DarkLightMode/Pages/Index.cshtml
@@ -32,26 +32,5 @@
     </form>
 </div>
 @section Scripts {
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const htmlElement = document.documentElement;
-            const switchElement = document.getElementById('darkModeSwitch');
-
-            const currentTheme = localStorage.getItem('bsTheme') || 'dark';
-            htmlElement.setAttribute('data-bs-theme', currentTheme);
-            switchElement.checked = currentTheme === 'dark';
-            
-            switchElement.addEventListener('change', function () {
-                if (this.checked) {
-                    htmlElement.setAttribute('data-bs-theme', 'dark');
-                    localStorage.setItem('bsTheme', 'dark');
-                } else {
-                    htmlElement.setAttribute('data-bs-theme', 'light');
-                    localStorage.setItem('bsTheme', 'light');
-                }
-                location.reload();
-            });
-
-        });
-    </script>
+    <script src="js/index.js"></script>
 }
