Updated UI elements and added theme handling
In `About.cshtml`, updated the heading text and added a new form. `Index.cshtml` saw significant form modifications, including layout adjustments and default value settings. `readme.md` was updated with additional project information. Removed theme setting line in `index.js`. In `site.js`, added code to adjust UI elements based on the current theme and improved nav bar handling.

--- a/DarkLightMode/Pages/About.cshtml
+++ b/DarkLightMode/Pages/About.cshtml
@@ -5,7 +5,8 @@
 
 <div class="container">
 
-    <h1 class="fs-5">Not really about</h1>
+    <h1 id="header_main">Example heading <span class="badge bg-primary">New</span></h1>
+
     <form class="form-group" method="post" id="currentForm" autocomplete="on">
         <input type="hidden" asp-for="UseAutoComplete" id="useAutoComplete" />
         <div class="form-group">
