--- a/DarkLightMode/Pages/Shared/_Layout.cshtml
+++ b/DarkLightMode/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a id="about_link" class="nav-link " asp-area="" asp-page="/About">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a id="about_link" class="nav-link " asp-area="" asp-page="/SettingsPage">Settings</a>
+                        </li>
                     </ul>
                 </div>
             </div>
