--- a/Bootstrap5ModalExample/Pages/Dialog1.cshtml
+++ b/Bootstrap5ModalExample/Pages/Dialog1.cshtml
@@ -2,12 +2,21 @@
 @model Bootstrap5ModalExample.Pages.Dialog1Model
 @{
 }
+<style>
 
-<div class="container" id="main-content">
-    <div class="row">
+
+</style>
+@* <div class="container" id="main-content">
+    <div class="row justify-content-center ">
         <button class="btn btn-primary w-25" id="btn-confirm">Send message</button>
     </div>
+</div> *@
+<div class="d-flex align-items-center justify-content-center vh-100" >
+    <div class="row justify-content-center ">
+        <button class="btn btn-primary btn-lg" id="btn-confirm">Send message</button>
+    </div>
 </div>
+
 
 <form method="post" class="w-25" id="messageForm">
     <input type="hidden" asp-for="Recipient" id="recipientName" />
@@ -15,7 +24,10 @@
     <input type="hidden" asp-for="Accepted" id="acceptedFlag" />
 </form>
 
-<div class="modal fade" id="mi-modal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="mi-modal" tabindex="-1"
+     data-bs-backdrop="static"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
 
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -27,15 +39,11 @@
                 <form>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Recipient:</label>
-                        <input type="text" class="form-control" id="recipient-name" value="Mary">
+                        <input type="text" class="form-control" id="recipient-name" asp-for="Recipient">
                     </div>
                     <div class="mb-3">
                         <label for="message-text" class="col-form-label">Message:</label>
-                        <textarea class="form-control" id="message-text">
-Now is the winter of our discontent.
-Made glorious summer by this sun of York;
-                        
-</textarea>
+                        <textarea class="form-control" id="message-text" asp-for="Message"></textarea>
                     </div>
                 </form>
             </div>
@@ -51,23 +59,25 @@ Made glorious summer by this sun of York;
 @section Scripts
 {
     <script>
+
+
         var modalConfirm = function (callback) {
+            var modal = new bootstrap.Modal(document.getElementById("mi-modal"));
 
-            $("#btn-confirm").on("click", function () {
-                $("#mi-modal").modal('show');
+            document.getElementById("btn-confirm").addEventListener("click", function () {
+                modal.show();
             });
 
-            $("#modal-btn-yes").on("click", function () {
+            document.getElementById("modal-btn-yes").addEventListener("click", function () {
                 callback(true);
-                $("#mi-modal").modal('hide');
+                modal.hide();
             });
 
-            $("#modal-btn-no").on("click", function () {
+            document.getElementById("modal-btn-no").addEventListener("click", function () {
                 callback(false);
-                $("#mi-modal").modal('hide');
+                modal.hide();
             });
         };
-
         modalConfirm(function (confirm) {
             if (confirm) {
                 document.getElementById("recipientName").value = document.getElementById("recipient-name").value;
