--- a/Bootstrap5ModalExample/Pages/_ViewImports.cshtml
+++ b/Bootstrap5ModalExample/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Bootstrap5ModalExample
 @namespace Bootstrap5ModalExample.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Bootstrap5ModalExample
