--- a/WebApplication1/Pages/Shared/_ConfirmModal.cshtml
+++ b/WebApplication1/Pages/Shared/_ConfirmModal.cshtml
@@ -12,7 +12,10 @@
 
 <form method="post" asp-page-handler="Confirm">
 
-    <div class="modal fade" id="confirmModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal fade" 
+         id="confirmModal" 
+         data-bs-backdrop="static" 
+         tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
 
         <div class="modal-dialog modal-dialog-centered">
 
