--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
+
 <h1 class="text-center">Modal dialog</h1>
 
 <div class="mx-auto p-2" style="width: 200px;">
@@ -22,7 +23,7 @@
      aria-labelledby="confirmModalLabel"
      aria-hidden="true">
 
-    <div class="modal-dialog  modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered">
 
         <div class="modal-content ">
 
@@ -49,14 +50,14 @@
                     <button type="submit"
                             name="answer"
                             value="false"
-                            class="btn btn-secondary">
+                            class="btn btn-secondary btn-xl">
                         No
                     </button>
 
                     <button type="submit"
                             name="answer"
                             value="true"
-                            class="btn btn-primary">
+                            class="btn btn-primary btn-xl">
                         Yes
                     </button>
                 </div>
