--- a/WebApplication1/Pages/Shared/_ConfirmModal.cshtml
+++ b/WebApplication1/Pages/Shared/_ConfirmModal.cshtml
@@ -34,8 +34,8 @@
                 <input type="hidden" name="itemId" value="@Model.ItemId"/>
 
                 <div class="modal-footer">
-                    <button type="submit" name="answer" value="false" class="btn btn-secondary">No</button>
-                    <button type="submit" name="answer" value="true" class="btn btn-primary">Yes</button>
+                    <button type="submit" name="answer" value="false" class="btn btn-secondary btn-lg">No</button>
+                    <button type="submit" name="answer" value="true" class="btn btn-primary btn-lg">Yes</button>
                 </div>
 
             </div>
