--- a/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/StickySocialBar">Sticky</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
                     </ul>
                 </div>
             </div>
