Update form layout and CSS styles
Modified `Index.cshtml` to enhance form layout and button styles, including adjustments to the "Cancel" button and transition effects for the "Save changes" button.

Updated `site.css` to ensure the `html` element has a minimum height of 100%, reduced the `body` margin-bottom from 60px to 40px, and added overflow properties for better scrolling behavior.

by Karen

--- a/FastBootstrapApp1/Pages/Index.cshtml
+++ b/FastBootstrapApp1/Pages/Index.cshtml
@@ -61,7 +61,7 @@
     
     <div class="vstack gap-3 max-w-xs mx-auto">
         <button type="button transition ease-in-out delay-150 -translate-y-px-hover duration-300 scale-110-hover" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-default">Cancel</button>
+        <button type="button" class="btn btn-default mb-2">Cancel</button>
     </div>
 
 </div>
