--- a/FastBootstrapApp1/wwwroot/css/site.css
+++ b/FastBootstrapApp1/wwwroot/css/site.css
@@ -15,8 +15,15 @@ html {
 html {
   position: relative;
   min-height: 100%;
+
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 40px;
+}
+
+body {
+    overflow: -moz-scrollbars-vertical;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
